# .github

./: PULL_REQUEST_TEMPLATE.md  README.md  pull_request_template.md
PULL_REQUEST_TEMPLATE/: task_sprint.md
legacy-github/PULL_REQUEST_TEMPLATE/: bug_fix.md
legacy-github/actions/cd-action/: action.yml
legacy-github/assets/: requirements.txt
legacy-github/scripts/: check_environment.py  create_testsigma_env.py  fix_duplicates_elb.py  k8s_env.py  run_migrations.py  testsigma.sh  validate_testsigma.py
legacy-github/templates/: createTestsigmaEnv.json.j2
legacy-github/workflows/: cd.yml  delete-environments.yml  environments.yml  restore-secrets.yml  stress-environments.yml
projects-templates/k8s_v1/actions/: action.yml  main.js
projects-templates/k8s_v1/actions/helm/: Chart.yaml  environment.yml  values.yaml
projects-templates/k8s_v1/actions/helm/templates/: hpa.yaml  service.yaml
projects-templates/k8s_v1/actions/scripts/: main.py  pyproject.toml
projects-templates/k8s_v1/actions/scripts/lib/commands/: add_ci_k8s_dns.py  create_containers.py  create_environment.py  deploy_k8s.py  export_k8s.py
projects-templates/k8s_v1/actions/scripts/lib/core/: constants.py  helpers.py
projects-templates/k8s_v1/helm/: containers.yml  environment.yml  values.yaml
projects-templates/k8s_v1/helm/templates/: NOTES.txt  deployment.yaml  env.yaml
projects-templates/k8s_v1/scripts/: pyproject.toml  requirements.txt  tests.txt
projects-templates/k8s_v1/scripts/lib/: __init__.py  app.py  config.py
tests/stress/: locustfile.py
(+5 files in other folders)
